# cmake_sample1

./: .gitignore  CMakeLists.gtest.txt  CMakeLists.txt  CMakeLists.txt.in  coverage.sh
src/: main.cpp  sum_of_digits.cpp  sum_of_digits.h
src/test/: test_sum_of_digits.cpp
